--- a/docker/.env
+++ b/docker/.env
@@ -45,6 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+PAGINATION_PER_PAGE=10
 
 # Docker Compose Environment Variables
 
